--- a/Layout.css
+++ b/Layout.css
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-columns: 110px 1fr 1fr 1fr;
+  grid-template-columns: 110px 1fr 1fr 100px;
   gap: 10px 10px;
   place-content: center center;
   grid-auto-flow: column dense;
